apps/app-proxy/overlays/codefresh-round3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: codefresh-round3-cap-app-proxy
  namespace: codefresh-round3
spec:
  ingressClassName: nginx
  rules:
  - host: codefresh-csdp-poc-bolt.net
    http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        path: /app-proxy/
        pathType: Prefix
status:
  loadBalancer: {}
